Add API paths
